--- a/Images/Stylesheet.css
+++ b/Images/Stylesheet.css
@@ -1,15 +1,19 @@
 * {font-family: monospace ;}
 h1 {
     font-family: 'Courier New' ; text-align: center ;
-    color: blueviolet;
-}
+    color: white;
+    font-size: 60px;
+    }
 body {
     background-color: #C8C8C8;
-    background-color: hsl(0,0%,78%);}}
+    background-color: rgb(30, 162, 166);
+   }
 
 img {
-    height: 250px; 
-width: 250px;
+     border: rgb(109, 110, 114);  
+    height: 450px; 
+width: 450px;
+padding: 50px;
  }
 
 footer img {
@@ -21,15 +25,23 @@ main {
 }
 article {
     display: inline-block;
+    
 }
 li {
+    color: black;
+    text-decoration: none;
     display: inline-block;
-    margin: 120px;
+margin-left: 50px;
 font-size: 50px;
 
 color: black;
 }
 footer p {
     font-size: 20px;
-
+}
+p {
+    border: 2px rgb(109, 110, 114);
+}
+ul{
+    background-color:  rgb(109, 110, 114);
 }
